--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				<h1>Front End Web Developer</h1>
 
 				<div>
-					<a href="#about" class="me-2">Know more about me ...</a>
-					<a href="#tools">Know the tools I use ...</a>
+					<a href="#about" class="me-2 btn btn-info">Know more about me ...</a>
+					<a href="#tools" class="btn btn-warning">Know the tools I use ...</a>
 				</div>
 				<a href="mailto:danvincent.almeda@dict.gov.ph" class="btn btn-success btn-lg mt-3 rounded-pill">Let's work together!</a>
 				
